@@ -27,8 +27,8 @@ HOMEPAGE="http://www.gnu.org/software/emacs/
 	http://www.emacswiki.org/emacs/EmacsXembed"
 
 LICENSE="GPL-3+ FDL-1.3+ BSD HPND MIT W3C unicode PSF-2"
-SLOT="24"
-IUSE="acl alsa aqua athena dbus games gconf gfile gif gnutls gpm gsettings gtk +gtk3 gzip-el hesiod imagemagick +inotify jpeg kerberos libxml2 livecd m17n-lib motif pax_kernel png selinux sound source svg tiff toolkit-scroll-bars wide-int X Xaw3d xft +xpm xwidgets zlib"
+SLOT="25"
+IUSE="acl alsa aqua athena dbus games gconf gfile gif gnutls gpm gsettings gtk gtk3 gzip-el hesiod imagemagick +inotify jpeg kerberos libxml2 livecd m17n-lib motif pax_kernel png selinux sound source svg tiff toolkit-scroll-bars wide-int X Xaw3d xft +xpm xwidgets zlib"
 REQUIRED_USE="?? ( aqua X )"
 
 RDEPEND="sys-libs/ncurses
@@ -68,21 +68,21 @@ RDEPEND="sys-libs/ncurses
 				>=dev-libs/m17n-lib-1.5.1
 			)
 		)
-		gtk? (
+		gtk3? (
+			x11-libs/gtk+:3
 			xwidgets? (
-				x11-libs/gtk+:3
+				>=dev-libs/gobject-introspection-1.32.1
 				net-libs/webkit-gtk:3
 			)
-			!xwidgets? (
-				gtk3? ( x11-libs/gtk+:3 )
-				!gtk3? ( x11-libs/gtk+:2 )
-			)
 		)
-		!gtk? (
-			motif? ( >=x11-libs/motif-2.3:0 )
-			!motif? (
-				Xaw3d? ( x11-libs/libXaw3d )
-				!Xaw3d? ( athena? ( x11-libs/libXaw ) )
+		!gtk3? (
+			gtk? ( x11-libs/gtk+:2 )
+			!gtk? (
+				motif? ( >=x11-libs/motif-2.3:0 )
+				!motif? (
+					Xaw3d? ( x11-libs/libXaw3d )
+					!Xaw3d? ( athena? ( x11-libs/libXaw ) )
+				)
 			)
 		)
 	)"
@@ -173,26 +173,15 @@ src_configure() {
 				"USE flag \"m17n-lib\" has no effect if \"xft\" is not set."
 		fi
 
-		local f
-		if use gtk; then
-			einfo "Configuring to build with GIMP Toolkit (GTK+)"
-			if use xwidgets; then
-				myconf+=" --with-x-toolkit=gtk3 --with-xwidgets"
-			else
-				myconf+=" --with-x-toolkit=$(usex gtk3 gtk3 gtk2)"
-				myconf+=" --without-xwidgets"
-			fi
-			for f in motif Xaw3d athena; do
-				use ${f} && ewarn \
-					"USE flag \"${f}\" has no effect if \"gtk\" is set."
-			done
+		if use gtk3; then
+			einfo "Configuring to build with GIMP Toolkit (GTK+) version 3"
+			myconf+=" --with-x-toolkit=gtk3 $(use_with xwidgets)"
+		elif use gtk; then
+			einfo "Configuring to build with GIMP Toolkit (GTK+) version 2"
+			myconf+=" --with-x-toolkit=gtk2"
 		elif use motif; then
 			einfo "Configuring to build with Motif toolkit"
 			myconf+=" --with-x-toolkit=motif"
-			for f in Xaw3d athena; do
-				use ${f} && ewarn \
-					"USE flag \"${f}\" has no effect if \"motif\" is set."
-			done
 		elif use athena || use Xaw3d; then
 			einfo "Configuring to build with Athena/Lucid toolkit"
 			myconf+=" --with-x-toolkit=lucid $(use_with Xaw3d xaw3d)"
@@ -200,8 +189,16 @@ src_configure() {
 			einfo "Configuring to build with no toolkit"
 			myconf+=" --with-x-toolkit=no"
 		fi
-		! use gtk && use xwidgets && ewarn \
-			"USE flag \"xwidgets\" has no effect if \"gtk\" is not set."
+
+		local f tk
+		for f in gtk3 gtk motif Xaw3d athena; do
+			use ${f} || continue
+			[[ ${tk} = gtk* || ${tk} = motif ]] \
+				&& ewarn "USE flag \"${f}\" ignored (superseded by \"${tk}\")"
+			: ${tk:=${f}}
+		done
+		! use gtk3 && use xwidgets && ewarn \
+			"USE flag \"xwidgets\" has no effect if \"gtk3\" is not set."
 	elif use aqua; then
 		einfo "Configuring to build with Nextstep (Cocoa) support"
 		myconf+=" --with-ns --disable-ns-self-contained"
@@ -306,7 +303,7 @@ src_install () {
 	EOF
 	elisp-site-file-install "${T}/${SITEFILE}" || die
 
-	dodoc README README.xwidget BUGS
+	dodoc README README.xwidget BUGS CONTRIBUTE
 
 	if use aqua; then
 		dodir /Applications/Gentoo
