@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-xwidget-25.0.9999 (29 Dec 2014)
+
+  29 Dec 2014; Ulrich Müller <ulm@gentoo.org> -emacs-xwidget-24.4.9999.ebuild,
+  +emacs-xwidget-25.0.9999.ebuild:
+  Upstream version number has changed. Merge changes from emacs-vcs.
+
   13 Nov 2014; Ulrich Müller <ulm@gentoo.org> emacs-xwidget-24.4.9999.ebuild:
   Merge changes from emacs-vcs.
 
